--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "testing-library": "0.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
